# cxxdemo

./: .gitignore  .gitmodules  README.md
SegmentationTutorial/: CMakeLists.txt
bilian/: 1664.cpp  2675.cpp  2728.cpp
cffi-demos/beigin/: example_so_build.py  test.py
cffi-demos/opencv_demo/: _example.c  _mycv.c  example_so_build.py  test.py
commons/: a.txt  draft_save_vector_to_bin.cpp  test_map.cpp  test_read_file.cpp  test_vector.cpp
cxx_boostpython_example/: CMakeLists.txt  py_interface.cpp  test.py
cxx_to_py_demo/demo2/: CMakeLists.txt  wrapper.cpp
encryption/: 1.txt  Makefile  des-1.cpp  install.txt  main.c  md5-2.c  md5.c  test.c
hdu/: 1216.cpp  1216.timeout.cpp  1219.cpp  2046.cpp  bee.cpp
imagemagick_examples/: Makefile  a.cpp  draw.cpp  get_set_Pixel_to_cvmat.cpp
leveldb_demo/: utils.cpp
libpng/: create_image_with_palette.cpp  libpng_test.c  make.sh  test  test.cpp
opencv_c++_to_py_demo/: README.md
opencv_convexhull/: CMakeLists.txt  main.cxx
opencv_cxx_to_py_demo/: CMakeLists.txt  examples.cpp
opencv_example1/: CMakeLists.txt  main.cxx
opencv_test/: main.cxx
poj/: NastyHacks_3030.cpp  copier_reduction.cxx  counter_thum.cpp  euclid.cxx  exponentiation_1001.cxx  p_hp.cxx  p_hp.in  palindrome.cxx  readme.txt  t_gcd.cxx
practice/: LabelBinaryObjects.cpp  LabelBinaryObjects_v1.cpp  LocalMeanImage.cpp
practice/union_set/: mfset.cpp  mfset.h  sample.cpp  sample.h
protobuf_demo/: dataset.pb.cpp  dataset.pb.h  dataset.proto  make.sh  proto.sh
py++demo/: CMakeLists.txt  a.py  build.py  chg.cc  chg.h  chg_py.cc  chg_py.cc.bak  exposed_decl.pypp.txt
py++demo2/: Makefile  test.cpp
read_indexed_image_to_cvmat/: CMakeLists.txt  main.cxx
template/demo1/: t.cpp
xcode_example1/test/: main.cpp  test.1
xcode_example1/test.xcodeproj/: project.pbxproj
xcode_example1/test.xcodeproj/project.xcworkspace/xcuserdata/xcbfreedom.xcuserdatad/: UserInterfaceState.xcuserstate
xcode_example1/test.xcodeproj/xcuserdata/xcbfreedom.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
xcode_example1/test.xcodeproj/xcuserdata/xcbfreedom.xcuserdatad/xcschemes/: test.xcscheme  xcschememanagement.plist
